--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+# Globe Life Wiki
+
+Welcome to Globe Life Wiki! This is a basic docs template. You can use it as a starting point for your own project :)
 
 ## What is Nextra?
 
