--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,10 +1,14 @@
-# Globe Life Wiki
+import { Callout } from 'nextra-theme-docs'
 
-Welcome to Globe Life Wiki! This is a basic docs template. You can use it as a starting point for your own project :)
+# Digital Marketing - Dev Team Wiki
 
-## What is Nextra?
+Welcome to Digital Marketing - Dev Team Wiki!
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+<Callout type="error" emoji="️🚫">
+Please help keep the Dev Team Wiki compliant with IT by not sharing Passwords and Sensitive Data.
+If you want to include sensitive items, just add the secret number we can find it on [Secret Server](https://ss.mgmt.tmksecue.com/)
+example: password: [secretId=20664](https://ss.mgmt.tmksecure.com/SecretView.aspx?secretId=20664)
+</Callout>
 
 ## Documentation
 
